# ditto

./: Cargo.toml  README.md  manifest.json
cli/: Cargo.toml
cli/src/: main.rs
simulation/: Cargo.toml
simulation/src/: lib.rs  main.rs  models.rs
ts_core/: Cargo.toml
ts_core/src/: commands.rs  lib.rs  rules.rs
