[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A Rust library for traffic shaping using pf and dummynet on macOS"
authors = ["sdeng"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tempfile = "3.8"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
ts_core = { path = "../ts_core" }
simulation = { path = "../simulation" }
serde = { version = "1.0.215" }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "traffic-shaper"
path = "src/main.rs"
