[package]
name = "traffic_shaper_sim"
version = "0.1.0"
edition = "2021"
description = "A Rust library for traffic shaping using pf and dummynet on macOS"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
ts_core = { path = "../ts_core" }
serde = "1.0.215"
serde_json = "1.0.132"


[[bin]]
name = "traffic-shaper-sim"
path = "src/main.rs"
