[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
description = "A Rust library for traffic shaping using pf and dummynet on macOS"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
ts_core = { path = "../ts_core" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.4", features = ["derive"] }
pin-project = "1"
tokio = { version = "1", features = ["full"] }
serde_with = "3.11.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
